[project]
name = "dacon-hecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fosca709", email = "141136674+Fosca709@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
